2007-09-06  Masami Hiramatsu <mhiramat@redhat.com>

	PR 4542
	* tapsets.cxx (dwarf_query::build_blacklist): add __switch_to to
	blacklisted_return_probes on i686

2007-08-30  David Smith  <dsmith@redhat.com>

	PR 4983
	* translate.cxx (c_tmpcounter::visit_print_format): Don't declare
	temporaries for number and string constants.
	(c_unparser::visit_print_format): Use numeric and string constants
	directly instead of copying them into temporaries.

2007-08-27  Frank Ch. Eigler  <fche@redhat.com>

	PR 4817
	* NEWS: Mention retirement of LKET.
	* configure.ac: Remove mysql dependency.
	* systemtap.spec.in: Remove glib2 dependency.
	* configure, config.in: Regenerated.

2007-08-24  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Check for proper $PROCFLAGS-dependent -lcap.
	* Makefile.am (staprun_LDADD): Use autoconf variable rather than
	-lcap literal.
	* configure, aclocal.m4, Makefile.in, config.in: Regenerated.

2007-08-24  Frank Ch. Eigler  <fche@redhat.com>

	PR 4899
	* tapsets.cxx (dwflpp::has_single_line_record): Extended,
	abstraction violated.
	(iterate_over_srcfile_lines): Remove exactly line number match
	logic.  Improve error message to offered better-checked alternative
	line numbers.
	(query_srcfile_line): Whoops, pass scope_die down for statement("...")
	probes, to enable $target var processing.

2007-08-21  David Smith  <dsmith@redhat.com>

	PR 2305
	* translate.cxx (c_unparser::visit_foreach_loop): When the user
	requested sorting an array of aggregates by value, sort by
	@count.

2007-08-20  Martin Hunt  <hunt@redhat.com>

	PR 2424
	From Lai Jiangshan <laijs@cn.fujitsu.com:
	* util.cxx (cmdstr_quoted): New. Properly quote 
	command string.
	* buildrun.cxx (run_pass): Call cmdstr_quoted().

2007-08-20  Frank Ch. Eigler  <fche@elastic.org>

	From Satoru MORIYA <satoru.moriya.br@hitachi.com>
	* staplog.c: Updated.

2007-08-20  David Smith  <dsmith@redhat.com>

	From Lai Jiangshan <laijs@cn.fujitsu.com>