@@ -1027,6 +1027,7 @@ systemtap_session::systemtap_session ():
   mark_derived_probes(0), 
   hrtimer_derived_probes(0), 
   perfmon_derived_probes(0), 
+  procfs_derived_probes(0), 
   op (0), up (0)
 {
 }
